src/test/ui/borrowck/borrowck-assign-to-constants.ast.stderr
error[E0594]: cannot assign to immutable static item
  --> $DIR/borrowck-assign-to-constants.rs:8:5
   |
LL |     foo = 6;
   |     ^^^^^^^

error: aborting due to previous error

